--- a/ms-gateway/Dockerfile
+++ b/ms-gateway/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17
 EXPOSE 8080
-COPY target/spring-boot-ms-gateway-docker spring-boot-ms-gateway-docker.jar
+COPY target/spring-boot-ms-gateway-docker.jar spring-boot-ms-gateway-docker.jar
 ENTRYPOINT [ "java", "-jar", "/spring-boot-ms-gateway-docker.jar" ]
