--- a/ms-eureka/src/main/resources/application.yml
+++ b/ms-eureka/src/main/resources/application.yml
@@ -11,5 +11,5 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    server-url:
+    service-url:
       defaulZone: http://localhost:${server.port}/eureka/
