--- a/ms-gateway/src/main/resources/application.yml
+++ b/ms-gateway/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8080
+
+
   
 spring:
   application:
@@ -25,4 +27,6 @@ spring:
 
 eureka:
   client:
-    register-with-eureka: false    
+    register-with-eureka: false
+    service-url:
+      defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka} 
